@@ -84,6 +84,7 @@ lib/Imager/Matrix2d.pm
 lib/Imager/Regops.pm
 lib/Imager/Transform.pm
 lib/Imager/Transformations.pod
+lib/Imager/Tutorial.pod
 lib/Imager/interface.pod
 lib/Imager/regmach.pod
 log.c
